Mar 11 Update after the event

--- a/faq.html
+++ b/faq.html
@@ -29,10 +29,10 @@
 
 <a
         class="bear-link"
-        href="index.html"
-        target="_blank"
+        href="detail.html"
         rel="noreferrer noopener"
 > <img src="Logo.jpg" alt="GitHub" width="72">
+    <!--
     <svg
             class="w-9"
             viewBox="0 0 969 955"
@@ -83,6 +83,7 @@
                 fill="currentColor"
         ></path>
     </svg>
+    -->
 </a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.6/babel.min.js"></script>
