Mar 11 Update after the event

--- a/archive.html
+++ b/archive.html
@@ -94,7 +94,7 @@
 <div class="footer" id="footer">
     <div class="footer-content">
         <p style="text-align: center;">
-            Wechat: t-tsinsita
+            <a class="pdf-link" href="https://blog.pitour.athmyx.com" target="_blank">PI Tournament Blog</a>
         </p>
         <a class="pdf-link" href="plan.pdf" target="_blank">Click to view the detailed arrangement</a>
         © 2025 Pi Tournament Committee. All rights reserved.
