Mar 11 Update after the event

--- a/detail.html
+++ b/detail.html
@@ -18,6 +18,8 @@
     Organizer: <strong>Pi Tournament Committee</strong><br>
     Presented by: <strong>WLSA Shanghai Academy</strong><br>
     <br>
+    <strong>Pi Tournament 2026 is tentatively scheduled on Mar 12, 2026</strong><br>
+    <br>
     <button disabled id="bottomButton">Register is now closed</button>
 </p>
 <ul>
