Mar 11 Update after the event

--- a/archive.html
+++ b/archive.html
@@ -24,7 +24,7 @@
     <h3 class="transparent-text">Mar 2025 Tournament</h3>
     <a class="transparent-text" href="Archive/Score%20Board%20Mar%202025.xlsx">Results</a>
     <a class="transparent-text" href="Archive/Problem%20Mar%202025.pdf">Problems</a>
-    <a class="transparent-text" href="Archive/Solutions%20Mar%202025.pdf">Solutions</a>
+    <a class="transparent-text" href="Archive/PiTournament2025Solutions.pdf">Solutions</a>
 
 </ul>
 <a
